--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,11 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - ./rails_app:/rails_app:cached
-      - /app/public/uploads
-      - /app/vendor
-      - /app/tmp
-      - /app/log
-      - /app/.git
+      - /rails_app/public/uploads
+      # - /rails_app/vendor
+      - /rails_app/tmp
+      - ./rails_app/log:/rails_app/log
+      - /rails_app/.git
     ports:
       - "${RAILS_PORT:-3000}:3000"
     depends_on:
