--- a/rails_app/.gitignore
+++ b/rails_app/.gitignore
@@ -73,3 +73,6 @@ yarn-debug.log*
 /public/uploads
 
 # End of https://www.toptal.com/developers/gitignore/api/rails
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
