--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
       - EDITOR=vim
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - ./rails_app:/rails_app:cached
-      - /rails_app/public/uploads
+      - ./rails_app:/rails_app
+      # - ./rails_app/public/uploads:/rails_app/public/uploads
       # - /rails_app/vendor
       - /rails_app/tmp
       - ./rails_app/log:/rails_app/log
