add controller test

--- a/rails_app/test/fixtures/photos.yml
+++ b/rails_app/test/fixtures/photos.yml
@@ -4,8 +4,8 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+<% file_path = Rails.root.join 'test/fixtures/files' %>
+test:
+  user_id: 1
+  title: TITLE
+  image: <%= file_path.join 'image.png' %>
